[gd_scene load_steps=2 format=1]

[ext_resource path="res://character/ai.gd" type="Script" id=1]

[node name="basic_artificial_intelligence" type="Node"]

script/script = ExtResource( 1 )

[node name="short_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[node name="long_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 4.0
one_shot = false
autostart = true

[connection signal="timeout" from="short_timer" to="." method="_on_short_timer_timeout"]

[connection signal="timeout" from="long_timer" to="." method="_on_long_timer_timeout"]


